fix(table-tr-height): updated vertical-align

--- a/src/patternfly/components/Table/table.scss
+++ b/src/patternfly/components/Table/table.scss
@@ -89,7 +89,7 @@
   --pf-c-table--m-compact__toggle--PaddingBottom: 0;
 
   // Check
-  --pf-c-table__check--input--MarginTop: #{pf-size-prem(3px)};
+  --pf-c-table__check--input--MarginTop: #{pf-size-prem(4px)};
   --pf-c-table__check--input--FontSize: var(--pf-global--FontSize--md);
 
   // Action
@@ -295,6 +295,14 @@
       // add border left
       background-color: transparent;
       border-left: var(--pf-c-table__expandable-row--before--BorderLeftWidth) solid var(--pf-c-table__expandable-row--before--BorderColor);
+    }
+
+    // Check table cell
+    .pf-c-table__check {
+      > input {
+        margin-top: var(--pf-c-table__check--input--MarginTop);
+        vertical-align: top;
+      }
     }
   }
   // stylelint-enable
@@ -506,14 +514,7 @@
 
 // Check table cell
 .pf-c-table__check {
-  vertical-align: top;
-
   --pf-c-table--cell--FontSize: var(--pf-c-table__check--input--FontSize);
-
-  > input {
-    margin-top: var(--pf-c-table__check--input--MarginTop);
-    vertical-align: top;
-  }
 }
 
 // Table action cell
@@ -712,6 +713,10 @@
 // ==================================================================
 .pf-c-table.pf-m-compact {
   --pf-c-table--cell--FontSize: var(--pf-c-table--m-compact--FontSize);
+  --pf-c-table--cell--PaddingTop: var(--pf-c-table--m-compact--cell--PaddingTop);
+  --pf-c-table--cell--PaddingRight: var(--pf-c-table--m-compact--cell--PaddingRight);
+  --pf-c-table--cell--PaddingBottom: var(--pf-c-table--m-compact--cell--PaddingBottom);
+  --pf-c-table--cell--PaddingRight: var(--pf-c-table--m-compact--cell--PaddingLeft);
 
   &.pf-m-no-border-rows:not(.pf-m-expandable) {
     tbody {
@@ -745,8 +750,8 @@
 
   // Thead only
   thead {
-    --pf-c-table--m-compact--cell--PaddingTop: var(--pf-c-table--m-compact-th--PaddingTop);
-    --pf-c-table--m-compact--cell--PaddingBottom: var(--pf-c-table--m-compact-th--PaddingBottom);
+    --pf-c-table--cell--PaddingTop: var(--pf-c-table--m-compact-th--PaddingTop);
+    --pf-c-table--cell--PaddingBottom: var(--pf-c-table--m-compact-th--PaddingBottom);
   }
 
   .pf-c-table__action {
